fixed alignment css

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 left;
   padding: 2rem;
-  text-align: center;
 }
 
 #other-expenses{
